# fivpy

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/fivpy/: __init__.py
tests/: test_fivpy.py  test_srs.py
