[tool.poetry]
name = "fivpy"
version = "0.1.0"
description = "A package for calculating forest inventories in python."
authors = ["Theilon Macedo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
